infrastructure/ingress-controller/ingress-monitoring.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
  name: alertmanager
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.crown-labs.ipv6.polito.it
    http:
      paths:
      - backend:
          serviceName: alertmanager-main
          servicePort: 9093
        path: /
  tls:
  - hosts:
    - alertmanager.crown-labs.ipv6.polito.it
    secretName: alertmanager-cert

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: alertmanager-oauth2
  namespace: monitoring
spec:
  rules:
  - host: alertmanager.crown-labs.ipv6.polito.it
    http:
      paths:
      - backend:
          serviceName: monitoring-oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - alertmanager.crown-labs.ipv6.polito.it
    secretName: alertmanager-cert

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/configuration-snippet: |
    modsecurity_rules '
        SecRuleEngine On
        SecRuleRemoveById 932110 932115 932130 933210 942100
    ';
  name: grafana
  namespace: monitoring
spec:
  rules:
  - host: grafana.crown-labs.ipv6.polito.it
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /
  tls:
  - hosts:
    - grafana.crown-labs.ipv6.polito.it
    secretName: grafana-cert

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/auth-url: https://$host/oauth2/auth
    nginx.ingress.kubernetes.io/auth-signin: https://$host/oauth2/start?rd=$escaped_request_uri
  generation: 1
  name: prometheus
  namespace: monitoring
spec:
  rules:
  - host: prometheus.crown-labs.ipv6.polito.it
    http:
      paths:
      - backend:
          serviceName: prometheus-k8s
          servicePort: 9090
        path: /
  tls:
  - hosts:
    - prometheus.crown-labs.ipv6.polito.it
    secretName: prometheus-cert

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  generation: 1
  name: prometheus-oauth2
  namespace: monitoring
spec:
  rules:
  - host: prometheus.crown-labs.ipv6.polito.it
    http:
      paths:
      - backend:
          serviceName: monitoring-oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - prometheus.crown-labs.ipv6.polito.it
    secretName: prometheus-cert
